--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 
             </div>
 
-            <button>Contact Now
+            <button><a href="https://join.skype.com/invite/ukdEdDgQbO44">Contact Now</a>
                 <i class="fa fa-address-book-o"></i>
 
             </button>
