--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
 
             <button>Contact Now
-                <i class="fa fa-address-book-o"></i>
+                <!-- <i class="fa fa-address-book-o"></i> -->
 
             </button>
         </div>
